--- a/app/src/main/res/layout/monitor_camera.xml
+++ b/app/src/main/res/layout/monitor_camera.xml
@@ -10,11 +10,11 @@
 
     <Button
         android:id="@+id/switch_camera"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginBottom="50dp"
         android:scaleType="fitCenter"
-        android:text="Switch camera"
+        android:background="@drawable/ic_rotate"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
