--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="red">#F44336</color>
     <color name="blue">#2F80ED</color>
     <color name="dark_blue">#213661</color>
+    <color name="grey">#989898</color>
 </resources>
