--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,6 +73,7 @@
             android:id="@+id/remotePhones"
             android:layout_marginEnd="24dp"
             android:visibility="gone"
+            android:gravity="center"
             android:orientation="vertical"
             android:maxHeight="250dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -94,11 +95,21 @@
                 android:layout_marginBottom="10dp"
                 android:textColor="@color/grey"
                 android:text="@string/no_devices" />
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:elevation="10dp"
+                android:visibility="gone"
+                android:indeterminateTint="@color/blue"
+                >
+            </ProgressBar>
             <TextView
                 android:id="@+id/back"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
+                android:padding="5dp"
                 android:textSize="20sp"
                 android:gravity="center"
                 android:textColor="@color/blue"
